<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.maimanhduy.calculatorproject.MainActivity">

    <LinearLayout
        android:id="@+id/idLinearLayoutt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tieude_mar_top"
            android:layout_weight="1"
            android:text="@string/tieude"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/size_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/idLinnearLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_result"
        android:background="@color/background_result"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bieuthuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/cach_5dp"
            android:paddingLeft="@dimen/cach_55dp"
            android:paddingRight="@dimen/cach_55dp"
            android:text="@string/s0"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_bieu_thuc" />

        <TextView
            android:id="@+id/ketqua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/cach_5dp"
            android:maxLines="1"
            android:paddingEnd="@dimen/cach_55dp"
            android:paddingLeft="@dimen/cach_5dp"
            android:paddingRight="@dimen/cach_55dp"
            android:paddingStart="@dimen/cach_5dp"
            android:text="@string/s0"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_result" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/idLinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/idLinearSub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idC"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/c"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/idCE"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/ce"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/chia"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/chia"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/nhan"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/nhan"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idLinearSub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/so1"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s1"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/so2"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s2"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/so3"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s3"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/cong"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/cong"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idLinearSub3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/so4"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s4"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/so5"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s5"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/so6"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s6"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/tru"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/tru"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="2"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/idLinerlayoitSubVertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/so7"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s7"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/so0"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s0"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idLinerlayoitSubVertical1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/so8"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s8"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/cham"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/cham"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idLinerlayoitSubVertical2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/so9"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/s9"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/phantram"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_style"
                    android:text="@string/phantram"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bang"
                    style="@style/AlertDialog.AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_dau_bang"
                    android:text="@string/bang"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_button"
                    android:typeface="monospace" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
